--- a/.github/workflows/build-docker.yml
+++ b/.github/workflows/build-docker.yml
@@ -22,8 +22,7 @@ jobs:
       matrix:
         variant:
           - name: 2g
-            dockerfile: Dockerfile.2g
-            suffix: 2g
+            dockerfile: Dockerfile-2g
     
     steps:
       - name: Checkout code
@@ -46,7 +45,7 @@ jobs:
           sudo rm -rf /usr/share/dotnet /usr/local/lib/android 
           sudo rm -rf /opt/ghc /usr/share/swift /usr/local/.ghcup
 
-      - name: Clean up unused Docker resources to free space
+      - name: Clean up unused Docker reso-rces to free space
         run: docker system prune -a -f
       
       - name: Extract metadata for Docker
